--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -20,7 +20,7 @@ defaults:
     working-directory: Frontend
 
 jobs:
-  lint-and-test:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -37,12 +37,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run ESLint
-        run: npm run lint
-
-      - name: Run TypeScript check
-        run: npm run type-check
-
       - name: Run tests
         run: npm run test -- --coverage
 
@@ -55,7 +49,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: lint-and-test
+    needs: test
 
     steps:
       - name: Checkout code
@@ -76,74 +70,9 @@ jobs:
         env:
           NODE_ENV: production
 
-      - name: Analyze bundle size
-        run: |
-          if [ -f "package.json" ] && grep -q "analyze" package.json; then
-            npm run analyze
-          fi
-
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: frontend-build
           path: Frontend/dist
           retention-days: 7
-
-  security:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Run security audit
-        run: npm audit --audit-level=high
-
-      - name: Run dependency check
-        run: |
-          npm install -g snyk
-          snyk test --severity-threshold=high || true
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build, security]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-build
-          path: Frontend/dist
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Deploy to S3
-        run: |
-          aws s3 sync ./dist s3://${{ secrets.FRONTEND_S3_BUCKET }} --delete
-
-      - name: Invalidate CloudFront cache
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
-
-      - name: Run smoke tests
-        run: |
-          echo "Running smoke tests..."
-          curl -f ${{ secrets.FRONTEND_URL }} || exit 1
