--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,16 @@ services:
       - monti-network
     restart: unless-stopped
 
+  dynamodb-local:
+    image: amazon/dynamodb-local:latest
+    container_name: monti-dynamodb
+    ports:
+      - "8000:8000"
+    command: "-jar DynamoDBLocal.jar -sharedDb"
+    networks:
+      - monti-network
+    restart: unless-stopped
+
   backend:
     build:
       context: ./Backend
@@ -40,10 +50,15 @@ services:
       - OIDC_CLIENT_ID=monti-app
       - OIDC_AUDIENCE=monti-app
       - SKIP_AUTH=false
+      - DYNAMO_MODE=local
+      - DYNAMO_ENDPOINT=http://dynamodb-local:8000
+      - DYNAMO_REGION=eu-central-1
+      - AGENTSIM_URL=http://agentsim:8081
     networks:
       - monti-network
     depends_on:
       - keycloak
+      - dynamodb-local
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/health"]
